@@ -22,7 +22,6 @@ import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -295,8 +294,6 @@ public abstract class AstroThingHandler extends BaseThingHandler {
 
     /**
      * Adds the provided {@link Job} to the queue (cannot be {@code null})
-     *
-     * @return {@code true} if the {@code job} is added to the queue, otherwise {@code false}
      */
     public void schedule(Job job, Calendar eventAt) {
         long sleepTime;
@@ -366,6 +363,6 @@ public abstract class AstroThingHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(AstroActions.class);
+        return List.of(AstroActions.class);
     }
 }
