@@ -14,7 +14,6 @@ package org.openhab.binding.denonmarantz.internal.discovery;
 
 import static org.openhab.binding.denonmarantz.internal.DenonMarantzBindingConstants.*;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -66,7 +65,7 @@ public class DenonMarantzDiscoveryParticipant implements MDNSDiscoveryParticipan
 
     @Override
     public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Collections.singleton(THING_TYPE_AVR);
+        return Set.of(THING_TYPE_AVR);
     }
 
     @Override
@@ -115,9 +114,8 @@ public class DenonMarantzDiscoveryParticipant implements MDNSDiscoveryParticipan
             properties.put(Thing.PROPERTY_MODEL_ID, model);
 
             String label = friendlyName + " (" + vendor + ' ' + model + ")";
-            DiscoveryResult result = DiscoveryResultBuilder.create(thingUID).withProperties(properties).withLabel(label)
+            return DiscoveryResultBuilder.create(thingUID).withProperties(properties).withLabel(label)
                     .withRepresentationProperty(Thing.PROPERTY_SERIAL_NUMBER).build();
-            return result;
 
         } else {
             return null;
