@@ -18,7 +18,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TooManyListenersException;
@@ -272,7 +272,7 @@ public class DigiplexBridgeHandler extends BaseBridgeHandler implements SerialPo
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(DigiplexDiscoveryService.class);
+        return List.of(DigiplexDiscoveryService.class);
     }
 
     private class BridgeMessageHandler implements DigiplexMessageHandler {
@@ -367,7 +367,7 @@ public class DigiplexBridgeHandler extends BaseBridgeHandler implements SerialPo
                     stream.write(request.getSerialMessage().getBytes());
                     stream.flush();
                     updateState(BRIDGE_MESSAGES_SENT, new DecimalType(messagesSent.incrementAndGet()));
-                    logger.debug("message sent: '{}'", request.getSerialMessage().replaceAll("\r", ""));
+                    logger.debug("message sent: '{}'", request.getSerialMessage().replace("\r", ""));
                     Thread.sleep(SLEEP_TIME); // do not flood PRT3 with messages as it creates unpredictable responses
                 } catch (IOException e) {
                     handleCommunicationError();
