@@ -21,8 +21,8 @@ import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.time.format.FormatStyle;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -262,7 +262,7 @@ public class GardenaAccountHandler extends BaseBridgeHandler implements GardenaS
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(GardenaDeviceDiscoveryService.class);
+        return Set.of(GardenaDeviceDiscoveryService.class);
     }
 
     @Override
@@ -279,11 +279,10 @@ public class GardenaAccountHandler extends BaseBridgeHandler implements GardenaS
                 continue;
             }
             final ThingHandler thingHandler = gardenaThing.getHandler();
-            if (!(thingHandler instanceof GardenaThingHandler)) {
+            if (!(thingHandler instanceof GardenaThingHandler gardenaThingHandler)) {
                 logger.debug("Handler for thingUID:{} is not a 'GardenaThingHandler' ({})", thingUID, thingHandler);
                 continue;
             }
-            final GardenaThingHandler gardenaThingHandler = (GardenaThingHandler) thingHandler;
             try {
                 gardenaThingHandler.updateProperties(device);
                 for (Channel channel : gardenaThing.getChannels()) {
