@@ -21,8 +21,8 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -59,7 +59,7 @@ public class LxControlLightControllerV2Test extends LxControlTest {
 
     @Test
     public void testChannels() {
-        testChannel("Number", Collections.singleton("Scene"));
+        testChannel("Number", Set.of("Scene"));
     }
 
     @Test
@@ -234,7 +234,7 @@ public class LxControlLightControllerV2Test extends LxControlTest {
         assertNotNull(min);
         assertNotNull(max);
         testChannel("Number", null, new BigDecimal(min), new BigDecimal(max), BigDecimal.ONE, null, false, options,
-                Collections.singleton("Scene"));
+                Set.of("Scene"));
     }
 
     private void testMood(String name, String id, boolean isStatic) {
@@ -247,7 +247,7 @@ public class LxControlLightControllerV2Test extends LxControlTest {
             assertEquals(0, mood.getChannels().size());
         } else {
             assertEquals(1, mood.getChannels().size());
-            testChannel(mood, "Switch", Collections.singleton("Lighting"));
+            testChannel(mood, "Switch", Set.of("Lighting"));
         }
     }
 
