@@ -13,9 +13,9 @@
 package org.openhab.binding.mybmw.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -128,7 +128,7 @@ public class MyBMWBridgeHandler extends BaseBridgeHandler implements StringRespo
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(VehicleDiscovery.class);
+        return Set.of(VehicleDiscovery.class);
     }
 
     public Optional<MyBMWProxy> getProxy() {
