@@ -14,7 +14,6 @@ package org.openhab.binding.nzwateralerts.internal.handler;
 
 import static org.openhab.binding.nzwateralerts.internal.NZWaterAlertsBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -41,7 +40,7 @@ import org.osgi.service.component.annotations.Reference;
 public class NZWaterAlertsHandlerFactory extends BaseThingHandlerFactory {
     private final HttpClient httpClient;
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_WATERALERT);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_WATERALERT);
 
     @Activate
     public NZWaterAlertsHandlerFactory(final @Reference HttpClientFactory httpClientFactory) {
