@@ -12,14 +12,13 @@
  */
 package org.openhab.binding.smaenergymeter.internal;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.thing.ThingTypeUID;
 
 /**
- * The {@link SMAEnergyMeterBinding} class defines common constants, which are
+ * The {@link SMAEnergyMeterBindingConstants} class defines common constants, which are
  * used across the whole binding.
  *
  * @author Osman Basha - Initial contribution
@@ -32,7 +31,7 @@ public class SMAEnergyMeterBindingConstants {
     // List of all Thing Type UIDs
     public static final ThingTypeUID THING_TYPE_ENERGY_METER = new ThingTypeUID(BINDING_ID, "energymeter");
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_ENERGY_METER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_ENERGY_METER);
 
     // List of all Channel IDs
     public static final String CHANNEL_POWER_IN = "powerIn";
